--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"gulp-sass": "^4.1.0",
 		"gulp-sass-glob": "^1.1.0",
 		"gulp-stylus": "^2.7.0",
+		"inputmask": "^5.0.6",
 		"jquery": "^3.6.0",
 		"reset.css": "^2.0.2",
 		"swiper": "^6.7.5",
